# ZKP-protocol-in-rust

./: Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs  zkp_auth.rs
